Changed gzip to br

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Cosmic_Racer_Ver1.0.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Cosmic_Racer_Ver1.0.data.gz",
-        frameworkUrl: buildUrl + "/Cosmic_Racer_Ver1.0.framework.js.gz",
-        codeUrl: buildUrl + "/Cosmic_Racer_Ver1.0.wasm.gz",
+        dataUrl: buildUrl + "/Cosmic_Racer_Ver1.0.data.br",
+        frameworkUrl: buildUrl + "/Cosmic_Racer_Ver1.0.framework.js.br",
+        codeUrl: buildUrl + "/Cosmic_Racer_Ver1.0.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Cosmic Racer",
